<resources>
    <string name="app_name">STU Rating</string>
    <string name="title_course_search">Course Search</string>
    <string name="title_me">Me</string>
    <string name="title_my_courses">My Courses</string>
    <string name="default_web_client_id">70027341984-btqfd5iphrk020ecc5tgs8kjr5m81vcp.apps.googleusercontent.com</string>
    <string name="stu_logo">STU Logo</string>
    <string name="app_description">Course and Teacher Rating App</string>
    <string name="log_in">Log in</string>
    <string name="title_top_list">Top List</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="course_description">Random events, probability measure. Conditional probebility, Bayes\' theorem. Random variable, probability distribution…</string>
    <string name="course_lecturer_label"><u>Course Lecturer:</u></string>
    <string name="course_examiner_label"><u>Course Examiner:</u></string>
    <string name="course_description_label"><u>Course Description:</u></string>
    <string name="course_avg_score_label">Average score for this <b><u>course</u></b></string>
    <string name="lecturer_avg_score_label">Average score for its <b><u>lecturer</u></b></string>
    <string name="examiner_avg_score_label">Average score for its <b><u>examiner</u></b></string>
    <string name="btn_add_course_label">Add Course</string>
    <string name="btn_remove_course_label">Remove Course</string>
    <string name="btn_rate_course">Rate this course</string>
    <string name="course_small_click_to_view_full">Click to view course</string>
    <string name="my_profile_label">My Profile</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="no_rated_courses_label">No. rated courses:</string>
    <string name="no_rated_lecturers_label">No. rated lecturers:</string>
    <string name="no_rated_examiners_label">No. rated examiners:</string>
    <string name="average_rating_for_courses_label">Average rating for courses:</string>
    <string name="average_rating_for_lecturers_label">Average rating for lecturers:</string>
    <string name="average_rating_for_examiners_label">Average rating for examiners:</string>
    <string name="my_courses_empty_text_label">It seems you haven\'t added any courses yet.</string>
    <string name="my_courses_empty_btn_label">Find Courses</string>
    <string name="add_rating_course_label"><u>Please rate the course as a whole:</u></string>
    <string name="add_rating_lecturer_label"><u>Its lecturer:</u></string>
    <string name="add_rating_examiner_label"><u>And finally, its examiner:</u></string>
    <string name="add_rating_fragment_label">Rate this course</string>
    <string name="fragment_rate_course_submit_btn">submit rating</string>
    <string name="btn_logout">Log me out</string>
    <string name="average_teachers_ratings_label">Average Teachers Ratings</string>
    <string name="fragment_search_search_label">Search From Course List</string>
    <string name="fragment_search_hint_label">Format B-PROG1</string>
    <string name="fragment_search_btn_label">SEARCH</string>
    <string name="fragment_top_list_label">Top 10</string>
    <string name="li_course_name">Course name:</string>
    <string name="li_course_lecturer">Course lecturer:</string>
    <string name="li_average_score">Average score:</string>
    <string name="fragment_search_teacher_lect_label">Select your lecturer</string>
    <string name="fragment_search_teacher_exam_label">Select your examiner</string>
    <string name="fragment_search_btn_add_label">Add to my courses</string>
    <string-array name="top_list_spinner_array">
        <item>Courses</item>
        <item>Lecturers</item>
        <item>Examiners</item>
    </string-array>
</resources>