<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navMe"
        android:icon="@drawable/ic_account_box_24"
        android:title="@string/title_me" />

    <item
        android:id="@+id/navMyCourses"
        android:icon="@drawable/ic_school_24"
        android:title="@string/title_my_courses" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/title_course_search" />

    <item
        android:id="@+id/navTopList"
        android:icon="@drawable/ic_format_list_bulleted_24"
        android:title="@string/title_top_list" />
<!--
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" /> -->
</menu>