<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navMe"
        android:name="sk.stuba.fei.uim.sturating.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/navMyCourses"
        android:name="sk.stuba.fei.uim.sturating.ui.mycourses.MyCoursesFragment"
        android:label="@string/title_my_courses"
        tools:layout="@layout/fragment_my_courses_empty" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="sk.stuba.fei.uim.sturating.ui.search.SearchFragment"
        android:label="@string/title_course_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navTopList"
        android:name="sk.stuba.fei.uim.sturating.ui.toplist.TopListFragment"
        android:label="@string/title_top_list"
        tools:layout="@layout/fragment_top_list" />

    <fragment
        android:id="@+id/navSettings"
        android:name="sk.stuba.fei.uim.sturating.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>