<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.me.MeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvMyProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_profile_label"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameLabel"
            style="@style/MeFragmentLabelText"
            android:text="@string/name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMyProfile" />

        <TextView
            android:id="@+id/tvName"
            style="@style/MeFragmentNameMedals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvMyProfile" />

        <TextView
            android:id="@+id/tvEmailLabel"
            style="@style/MeFragmentLabelText"
            android:text="@string/email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameLabel" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/MeFragmentLabelNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvNoRatedCourLabel"
            style="@style/MeFragmentLabelText"
            android:text="@string/no_rated_courses_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailLabel" />

        <TextView
            android:id="@+id/tvNoRatedCour"
            style="@style/MeFragmentLabelNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvNoRatedLecLabel"
            style="@style/MeFragmentLabelText"
            android:text="@string/no_rated_lecturers_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoRatedCourLabel" />

        <TextView
            android:id="@+id/tvNoRatedLec"
            style="@style/MeFragmentLabelNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoRatedCour" />

        <TextView
            android:id="@+id/tvNoRatedExamLabel"
            style="@style/MeFragmentLabelText"
            android:text="@string/no_rated_examiners_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoRatedLecLabel" />

        <TextView
            android:id="@+id/tvNoRatedExam"
            style="@style/MeFragmentLabelNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoRatedLec" />

        <TextView
            android:id="@+id/tvUsrAvgRatCourseLabel"
            style="@style/MeFragmentAvgRating"
            android:text="@string/average_rating_for_courses_label"
            app:layout_constraintTop_toBottomOf="@+id/tvNoRatedExamLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvUsrAvgRatCourse"
            style="@style/MeFragmentAvgRating"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUsrAvgRatCourseLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvUsrAvgRatLecLabel"
            style="@style/MeFragmentAvgRating"
            android:text="@string/average_rating_for_lecturers_label"
            app:layout_constraintTop_toBottomOf="@+id/tvUsrAvgRatCourse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvUsrAvgRatLec"
            style="@style/MeFragmentAvgRating"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUsrAvgRatLecLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvUsrAvgRatExamLabel"
            style="@style/MeFragmentAvgRating"
            android:text="@string/average_rating_for_examiners_label"
            app:layout_constraintTop_toBottomOf="@+id/tvUsrAvgRatLec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvUsrAvgRatExam"
            style="@style/MeFragmentAvgRating"
            app:layout_constraintTop_toBottomOf="@id/tvUsrAvgRatExamLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvUsrAvgRatExam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>